# singleton-cpp20

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  dyn_lib_a.cc  dyn_lib_b.cc  dyn_lib_dlopen.cc  example.cc  example.hxx  static_lib.cc
include/: singleton.hxx  utils.hxx
